<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save_btn"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/upload_btn"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share_btn"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/donate_btn"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/donate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/clear_btn"
        android:icon="@drawable/ic_clear_black_24dp"
        android:title="@string/clear"
        app:showAsAction="never" />
</menu>