<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    tools:ignore="Overdraw">

    <LinearLayout
        android:id="@+id/color_pick_btn"
        style="@style/ButtonWrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/color"
            android:src="@drawable/ic_square"
            tools:ignore="InefficientWeight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/brush_btn"
        style="@style/ButtonWrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/brush"
            android:src="@drawable/ic_brush"
            tools:ignore="InefficientWeight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stamp_btn"
        style="@style/ButtonWrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/stamp"
            android:src="@drawable/ic_stamp"
            tools:ignore="InefficientWeight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stamp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_btn"
        style="@style/ButtonWrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/text"
            android:src="@drawable/ic_cursor_text"
            tools:ignore="InefficientWeight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_btn"
        style="@style/ButtonWrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/filter"
            android:src="@drawable/ic_filter"
            tools:ignore="InefficientWeight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>